bugfix-wave color contrast -used darker shade

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
   --gray: #565656;
   --teal: #006060;
   --violetred: #a2106d;
-  --orange: #ffa500;
+  --orange: #dc582a;
   --lightgray: #e8e8e8;
   --red: #ff0000;
   --blue: #0000ff;
